@@ -1,5 +1,12 @@
 package com.ford.syncV4.proxy;
 
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
+import java.net.ProtocolException;
+import java.util.Hashtable;
+import java.util.Vector;
+
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpPost;
@@ -12,13 +19,6 @@ import org.apache.http.util.EntityUtils;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
-
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.ProtocolException;
-import java.util.Hashtable;
-import java.util.Vector;
 
 import android.os.Handler;
 import android.os.Looper;
@@ -39,9 +39,10 @@ import com.ford.syncV4.protocol.enums.FunctionID;
 import com.ford.syncV4.protocol.enums.MessageType;
 import com.ford.syncV4.protocol.enums.SessionType;
 import com.ford.syncV4.proxy.callbacks.InternalProxyMessage;
-import com.ford.syncV4.proxy.callbacks.OnProxyClosed;
 import com.ford.syncV4.proxy.callbacks.OnError;
+import com.ford.syncV4.proxy.callbacks.OnProxyClosed;
 import com.ford.syncV4.proxy.constants.Names;
+import com.ford.syncV4.proxy.interfaces.IProxyListenerALMTesting;
 import com.ford.syncV4.proxy.interfaces.IProxyListenerBase;
 import com.ford.syncV4.proxy.rpc.AddCommand;
 import com.ford.syncV4.proxy.rpc.AddCommandResponse;
@@ -83,9 +84,9 @@ import com.ford.syncV4.proxy.rpc.OnLanguageChange;
 import com.ford.syncV4.proxy.rpc.OnPermissionsChange;
 import com.ford.syncV4.proxy.rpc.OnTBTClientState;
 import com.ford.syncV4.proxy.rpc.OnVehicleData;
+import com.ford.syncV4.proxy.rpc.PerformAudioPassThruResponse;
 import com.ford.syncV4.proxy.rpc.PerformInteraction;
 import com.ford.syncV4.proxy.rpc.PerformInteractionResponse;
-import com.ford.syncV4.proxy.rpc.PerformAudioPassThruResponse;
 import com.ford.syncV4.proxy.rpc.PresetBankCapabilities;
 import com.ford.syncV4.proxy.rpc.PutFileResponse;
 import com.ford.syncV4.proxy.rpc.ReadDIDResponse;
@@ -101,10 +102,10 @@ import com.ford.syncV4.proxy.rpc.SetGlobalPropertiesResponse;
 import com.ford.syncV4.proxy.rpc.SetMediaClockTimer;
 import com.ford.syncV4.proxy.rpc.SetMediaClockTimerResponse;
 import com.ford.syncV4.proxy.rpc.Show;
-import com.ford.syncV4.proxy.rpc.ShowResponse;
-import com.ford.syncV4.proxy.rpc.SoftButtonCapabilities;
-import com.ford.syncV4.proxy.rpc.SliderResponse;
 import com.ford.syncV4.proxy.rpc.ShowConstantTBTResponse;
+import com.ford.syncV4.proxy.rpc.ShowResponse;
+import com.ford.syncV4.proxy.rpc.SliderResponse;
+import com.ford.syncV4.proxy.rpc.SoftButtonCapabilities;
 import com.ford.syncV4.proxy.rpc.Speak;
 import com.ford.syncV4.proxy.rpc.SpeakResponse;
 import com.ford.syncV4.proxy.rpc.SubscribeButton;
@@ -117,9 +118,9 @@ import com.ford.syncV4.proxy.rpc.UnregisterAppInterfaceResponse;
 import com.ford.syncV4.proxy.rpc.UnsubscribeButton;
 import com.ford.syncV4.proxy.rpc.UnsubscribeButtonResponse;
 import com.ford.syncV4.proxy.rpc.UnsubscribeVehicleDataResponse;
+import com.ford.syncV4.proxy.rpc.UpdateTurnListResponse;
 import com.ford.syncV4.proxy.rpc.VehicleType;
 import com.ford.syncV4.proxy.rpc.enums.AppType;
-import com.ford.syncV4.proxy.rpc.UpdateTurnListResponse;
 import com.ford.syncV4.proxy.rpc.enums.AudioStreamingState;
 import com.ford.syncV4.proxy.rpc.enums.ButtonName;
 import com.ford.syncV4.proxy.rpc.enums.GlobalProperty;
@@ -137,8 +138,8 @@ import com.ford.syncV4.proxy.rpc.enums.UpdateMode;
 import com.ford.syncV4.proxy.rpc.enums.VrCapabilities;
 import com.ford.syncV4.syncConnection.ISyncConnectionListener;
 import com.ford.syncV4.syncConnection.SyncConnection;
-import com.ford.syncV4.trace.TraceDeviceInfo;
 import com.ford.syncV4.trace.SyncTrace;
+import com.ford.syncV4.trace.TraceDeviceInfo;
 import com.ford.syncV4.trace.enums.InterfaceActivityDirection;
 import com.ford.syncV4.transport.BaseTransportConfig;
 import com.ford.syncV4.transport.SiphonServer;
@@ -1449,6 +1450,26 @@ public abstract class SyncProxyBase<proxyListenerType extends IProxyListenerBase
 						notifyProxyClosed("Unable to register app interface. Review values passed to the SyncProxy constructor. RegisterAppInterface result code: ", 
 								new SyncException("Unable to register app interface. Review values passed to the SyncProxy constructor. RegisterAppInterface result code: " + msg.getResultCode(), SyncExceptionCause.SYNC_REGISTRATION_ERROR));
 					}
+					
+					if (_callbackToUIThread) {
+						// Run in UI thread
+						_mainUIHandler.post(new Runnable() {
+							@Override
+							public void run() {
+								if (_proxyListener instanceof IProxyListener) {
+									((IProxyListener)_proxyListener).onRegisterAppInterfaceResponse(msg);
+								} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+									((IProxyListenerALMTesting)_proxyListener).onRegisterAppInterfaceResponse(msg);
+								}
+							}
+						});
+					} else {
+						if (_proxyListener instanceof IProxyListener) {
+							((IProxyListener)_proxyListener).onRegisterAppInterfaceResponse(msg);
+						} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+							((IProxyListenerALMTesting)_proxyListener).onRegisterAppInterfaceResponse(msg);
+						}
+					}
 				} else if ((new RPCResponse(hash)).getCorrelationID() == POLICIES_CORRELATION_ID 
 						&& functionName.equals(Names.OnEncodedSyncPData)) {
 					// OnEncodedSyncPData
@@ -1502,17 +1523,24 @@ public abstract class SyncProxyBase<proxyListenerType extends IProxyListenerBase
 						notifyProxyClosed("Unable to register app interface. Review values passed to the SyncProxy constructor. RegisterAppInterface result code: ", 
 								new SyncException("Unable to register app interface. Review values passed to the SyncProxy constructor. RegisterAppInterface result code: " + msg.getResultCode(), SyncExceptionCause.SYNC_REGISTRATION_ERROR));
 					}
-				} else {	
-					if (_callbackToUIThread) {
-						// Run in UI thread
-						_mainUIHandler.post(new Runnable() {
-							@Override
-							public void run() {
+				}
+				if (_callbackToUIThread) {
+					// Run in UI thread
+					_mainUIHandler.post(new Runnable() {
+						@Override
+						public void run() {
+							if (_proxyListener instanceof IProxyListener) {
 								((IProxyListener)_proxyListener).onRegisterAppInterfaceResponse(msg);
+							} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+								((IProxyListenerALMTesting)_proxyListener).onRegisterAppInterfaceResponse(msg);
 							}
-						});
-					} else {
-						((IProxyListener)_proxyListener).onRegisterAppInterfaceResponse(msg);							
+						}
+					});
+				} else {
+					if (_proxyListener instanceof IProxyListener) {
+						((IProxyListener)_proxyListener).onRegisterAppInterfaceResponse(msg);
+					} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+						((IProxyListenerALMTesting)_proxyListener).onRegisterAppInterfaceResponse(msg);
 					}
 				}
 			} else if (functionName.equals(Names.Speak)) {
@@ -1776,11 +1804,19 @@ public abstract class SyncProxyBase<proxyListenerType extends IProxyListenerBase
 					_mainUIHandler.post(new Runnable() {
 						@Override
 						public void run() {
-							((IProxyListener)_proxyListener).onUnregisterAppInterfaceResponse(msg);
+							if (_proxyListener instanceof IProxyListener) {
+								((IProxyListener)_proxyListener).onUnregisterAppInterfaceResponse(msg);
+							} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+								((IProxyListenerALMTesting)_proxyListener).onUnregisterAppInterfaceResponse(msg);
+							}
 						}
 					});
 				} else {
-					((IProxyListener)_proxyListener).onUnregisterAppInterfaceResponse(msg);	
+					if (_proxyListener instanceof IProxyListener) {
+						((IProxyListener)_proxyListener).onUnregisterAppInterfaceResponse(msg);
+					} else if (_proxyListener instanceof IProxyListenerALMTesting) {
+						((IProxyListenerALMTesting)_proxyListener).onUnregisterAppInterfaceResponse(msg);
+					}
 				}
 				
 				notifyProxyClosed("UnregisterAppInterfaceResponse", null);
@@ -2375,10 +2411,11 @@ public abstract class SyncProxyBase<proxyListenerType extends IProxyListenerBase
 		if (_advancedLifecycleManagementEnabled) {
 			if (		   request.getFunctionName() == Names.RegisterAppInterface
 					|| request.getFunctionName() == Names.UnregisterAppInterface) {
-				
-				SyncTrace.logProxyEvent("Application attempted to send a RegisterAppInterface or UnregisterAppInterface while using ALM.", SYNC_LIB_TRACE_KEY);
-				throw new SyncException("The RPCRequest, " + request.getFunctionName() + 
-						", is unnallowed using the Advanced Lifecycle Management Model.", SyncExceptionCause.INCORRECT_LIFECYCLE_MODEL);
+				if (!(_proxyListener instanceof IProxyListenerALMTesting)) {
+					SyncTrace.logProxyEvent("Application attempted to send a RegisterAppInterface or UnregisterAppInterface while using ALM.", SYNC_LIB_TRACE_KEY);
+					throw new SyncException("The RPCRequest, " + request.getFunctionName() + 
+							", is unnallowed using the Advanced Lifecycle Management Model.", SyncExceptionCause.INCORRECT_LIFECYCLE_MODEL);
+				}
 			}
 		}
 		
