@@ -1,0 +1,116 @@
+<?xml version="1.0" encoding="utf-8"?>
+<file>
+    <type type="unit"/>
+
+    <!-- NB! First we unregister the current application. -->
+    <test testName="UnregisterAppInterface_Success">
+        <UnregisterAppInterface correlationID="42" />
+
+        <result correlationID="42" return="SUCCESS"/>
+    </test>
+
+    <test testName="RegisterAppInterface_NoAppName">
+        <RegisterAppInterface correlationID="43">
+            <syncMsgVersion>
+                <Integer majorVersion="1" />
+                <Integer minorVersion="0" />
+            </syncMsgVersion>
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="EN-US" />
+            <String hmiDisplayLanguageDesired="EN-US" />
+            <String appID="8675309" />
+        </RegisterAppInterface>
+
+        <result correlationID="43" return="INVALID_DATA"/>
+    </test>
+
+    <!-- We can't send anything other than RegisterAppInterface message
+        when the app isn't registered yet.
+    <test testName="UnregisterAppInterface_NotRegistered">
+        <UnregisterAppInterface correlationID="44" />
+
+        <result correlationID="44" return="APPLICATION_NOT_REGISTERED"/>
+    </test>
+    -->
+
+    <test testName="RegisterAppInterface_WrongVersion">
+        <RegisterAppInterface correlationID="45">
+            <syncMsgVersion>
+                <Integer majorVersion="-1" />
+                <Integer minorVersion="-42" />
+            </syncMsgVersion>
+            <String appName="Ford Drive Green" />
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="EN-US" />
+            <String hmiDisplayLanguageDesired="EN-US" />
+            <String appID="8675309" />
+        </RegisterAppInterface>
+
+        <result correlationID="45" return="UNSUPPORTED_VERSION"/>
+    </test>
+
+    <test testName="RegisterAppInterface_WrongLanguage">
+        <RegisterAppInterface correlationID="45">
+            <syncMsgVersion>
+                <Integer majorVersion="1" />
+                <Integer minorVersion="0" />
+            </syncMsgVersion>
+            <String appName="Ford Drive Green" />
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="C++" />
+            <String hmiDisplayLanguageDesired="Objective-C" />
+            <String appID="8675309" />
+        </RegisterAppInterface>
+
+        <result correlationID="45" return="WRONG_LANGUAGE"/>
+    </test>
+
+    <test testName="RegisterAppInterface_Success">
+        <RegisterAppInterface correlationID="45">
+            <syncMsgVersion>
+                <Integer majorVersion="1" />
+                <Integer minorVersion="0" />
+            </syncMsgVersion>
+            <String appName="Ford Drive Green" />
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="EN-US" />
+            <String hmiDisplayLanguageDesired="EN-US" />
+            <String appID="8675309" />
+        </RegisterAppInterface>
+
+        <result correlationID="45" return="SUCCESS"/>
+    </test>
+
+    <test testName="RegisterAppInterface_AlreadyRegistered">
+        <RegisterAppInterface correlationID="46">
+            <syncMsgVersion>
+                <Integer majorVersion="1" />
+                <Integer minorVersion="0" />
+            </syncMsgVersion>
+            <String appName="Ford Drive Green" />
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="EN-US" />
+            <String hmiDisplayLanguageDesired="EN-US" />
+            <String appID="8675309" />
+        </RegisterAppInterface>
+
+        <result correlationID="46" return="APPLICATION_REGISTERED_ALREADY"/>
+    </test>
+
+    <test testName="RegisterAppInterface_DuplicateAppName">
+        <RegisterAppInterface correlationID="46">
+            <syncMsgVersion>
+                <Integer majorVersion="1" />
+                <Integer minorVersion="0" />
+            </syncMsgVersion>
+            <String appName="Ford Drive Green" />
+            <Boolean isMediaApplication="true" />
+            <String languageDesired="EN-US" />
+            <String hmiDisplayLanguageDesired="EN-US" />
+            <String appID="42" />
+        </RegisterAppInterface>
+
+        <result correlationID="46" return="DUPLICATE_NAME"/>
+    </test>
+
+</file>
